Major changes between version 0.98.2 and 0.98.3.
------------------------------------------------
  - Set the initial log level to LOG_INFO for monitors that connect
    without giving an explicit monitor setting.
  - Changes for compatibility with glibc 2.1.
  - Fixed a typo in modem.c that prevented non-/dev devices
    from working.
  - More major routing stuff. We now rely mainly on adding and
    removing addresses on interfaces. We still add the p-t-p
    routes for compatibility with 2.0 kernels (with 2.2 you
    get double routes but it isn't particularly important).
      We still add the default route if specified in the config.
    We still call the user's addroute and delroute scripts.
      The intention is to make diald work with interfaces rather
    than routes so it can run alongside a real routing daemon.
    This isn't tested :-).
      The secondary aim is to take protocol specific internals
    out of diald so that we can eventually work with IPv4, IPv6,
    IPX etc. in arbitrary combinations. This isn't done yet so
    don't get excited.
  - If we are in dynamic mode the buffered packets are sent back to
    the kernel via the proxy so that they will go back through the
    firewall/masquerading before being sent out again. Masquerading
    should be *enabled* in your ip-up script and *disabled* in your
    ip-down. You do not want packets to be masqueraded before being
    sent on diald's proxy. You don't know the address to masquerade
    as at that point and masquerading a packet which was previously
    masqueraded incorrectly will not magically make it work!
      Note that when the link is down the proxy must be allowed to
    see packets from your internal network. When the link is up both
    the proxy *and* the real interface should be masquerading packets.
      There are unavoidable races when the link goes up and down
    during which unmasqueraded packets may be sent on the real